yaml/network-policy/cilium_demo/nginx-policydemo-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: policy-demo
spec:
  selector: 
    env: test
  ports:
  - protocol: TCP
    targetPort: 80
    port: 80
    name: http
