yaml/network-policy/cilium_demo/allow-2pod.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: podallow
  namespace: networking
spec:
  podSelector:
    matchLabels:
      app: pod1
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: pod2
  policyTypes:
  - Ingress
