yaml/network-policy/cilium_demo/web-deny-all.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-deny-all
  namespace: networking
spec:
  podSelector:
    matchLabels:
      name: web
  ingress: []
